Ya funciona la generación de nuevo. Se ha movido el json de la tarea para que se quede almacenado en el directorio del problema que estamos trabajando